tests/ui/coherence/orphan-check-opaque-types-xxx-xxx-001.next.stderr
error[E0210]: type parameters and opaque types must be covered by another type when it appears before the first local type (`Local`)
  --> $DIR/orphan-check-opaque-types-xxx-xxx-001.rs:14:37
   |
LL | impl foreign::Trait1<Local, ()> for <() as Owner>::Opaque {}
   |                                     ^^^^^^^^^^^^^^^^^^^^^ contains an uncovered type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local,
           and no uncovered type parameters or opaque types appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<...> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0210`.
